--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "api-sitios-de-interes",
   "version": "1.0.0",
   "description": "API REST utilizando Express y Firebase",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "watch": "jest --watch",
+    "start": "ts-node-dev --respawn --transpileOnly ./src/index.ts"
   },
   "author": "Giuliana Olmos",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^3.3.2",
+    "@types/express": "^4.17.2",
     "express": "^4.17.1",
-    "firebase": "^7.6.1"
+    "firebase": "^7.6.1",
+    "firebase-admin": "^8.9.0",
+    "firebase-functions": "^3.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.7.4"
   }
 }
